Добавил картинки контентые
Добавил картинки контентые

--- a/price.html
+++ b/price.html
@@ -10,7 +10,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a href="index.html">
-        <img src="http://placehold.it/150x100" alt="Логотип Барбершоп Бородинский">
+        <img src="img/logo-mini.svg" alt="Логотип Барбершоп Бородинский">
       </a>
       <ul>
         <li class="main-navigation-item">
