--- a/catalog-item.html
+++ b/catalog-item.html
@@ -10,7 +10,7 @@
         <header class="main-header">
           <nav class="main-navigation">
             <a href="index.html">
-              <img src="http://placehold.it/150x100" alt="Логотип Барбершоп Бородинский">
+              <img src="img/logo-mini.svg" alt="Логотип Барбершоп Бородинский">
             </a>
             <ul>
               <li class="main-navigation-item">
@@ -46,12 +46,12 @@
           </ul>
           <div class="products-photo-gallery">
             <div class="products-main-photo">
-                <img src="http://placehold.it/150x100" width="460" height="498" alt="Основная фотография товара Набор для путешествий «Baxter of California»">
+                <img src="img/product-big.jpg" width="460" height="498" alt="Основная фотография товара Набор для путешествий «Baxter of California»">
             </div>
             <div class="products-mini-photos">
-                <img src="http://placehold.it/150x100" width="140" height="149" alt="Доп фотография товара Набор для путешествий «Baxter of California»">
-                <img src="http://placehold.it/150x100" width="140" height="149" alt="Доп фотография товара Набор для путешествий «Baxter of California»">
-                <img src="http://placehold.it/150x100" width="140" height="149" alt="Доп фотография товара Набор для путешествий «Baxter of California»">
+                <img src="img/product-mini-3.jpg" width="140" height="149" alt="Доп фотография товара Набор для путешествий «Baxter of California»">
+                <img src="img/product-mini-2.jpg" width="140" height="149" alt="Доп фотография товара Набор для путешествий «Baxter of California»">
+                <img src="img/product-mini-1.jpg" width="140" height="149" alt="Доп фотография товара Набор для путешествий «Baxter of California»">
             </div>
           </div>
           <div class="product-description">
