Создал формы и карту
Создал формы и карту

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a href="index.html">
-          <img src="img/logo-mini.svg" alt="Логотип Барбершоп Бородинский">
+          <img src="img/logo-mini.svg" width="111" height="24" alt="Логотип Барбершоп Бородинский">
         </a>
         <ul>
           <li class="main-navigation-item">
@@ -74,7 +74,7 @@
        <h2 class="visually-hidden">Товары магазина Барбершоп Бородинский</h2>
 
        <article class="catalog-item">
-         <img src="img/product-1.jpg" alt="Набор для путешествий «Baxter of California»">
+         <img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
          <h3 class="catalog-item-headline">Набор для путешествий<br>
             «Baxter of California»</h3>
             <div class="catalog-item-buy">
@@ -83,7 +83,7 @@
             </div>
        </article>
        <article class="catalog-item">
-          <img src="img/product-2.jpg" alt="Набор для путешествий «Baxter of California»">
+          <img src="img/product-2.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
           <h3 class="catalog-item-headline">Увлажняющий кондиционер<br>
               «Baxter of California»</h3>
              <div class="catalog-item-buy">
@@ -92,7 +92,7 @@
              </div>
         </article>
         <article class="catalog-item">
-            <img src="img/product-3.jpg" alt="Набор для путешествий «Baxter of California»">
+            <img src="img/product-3.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
             <h3 class="catalog-item-headline">Гель для волос<br>
                 «SUAVECITO»</h3>
                <div class="catalog-item-buy">
@@ -101,7 +101,7 @@
                </div>
           </article>
           <article class="catalog-item">
-              <img src="img/product-4.jpg" alt="Набор для путешествий «Baxter of California»">
+              <img src="img/product-4.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
               <h3 class="catalog-item-headline">Глина для укладки волос<br>
                   «American crew»</h3>
                  <div class="catalog-item-buy">
@@ -110,7 +110,7 @@
                  </div>
             </article>
             <article class="catalog-item">
-                <img src="img/product-5.jpg" alt="Набор для путешествий «Baxter of California»">
+                <img src="img/product-5.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
                 <h3 class="catalog-item-headline">Гель для волос<br>
                     «AMERICAN CREW»</h3>
                    <div class="catalog-item-buy">
@@ -119,7 +119,7 @@
                    </div>
               </article>
               <article class="catalog-item">
-                  <img src="img/product-6.jpg" alt="Набор для путешествий «Baxter of California»">
+                  <img src="img/product-6.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
                   <h3 class="catalog-item-headline">Набор для бритья<br>
                       «Baxter of California»</h3>
                      <div class="catalog-item-buy">
