--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         <section class="gallery">
           <h2>Фотогалерея</h2>
         <figure class="gallery-content">
-          <a href="#"><img src="img/photo-gallery-image.jpg" width="286" height="164" alt="Интерьер"></a>
+          <a href="#"><img src="img/photo-gallery-image.jpg" width="286" height="164" alt="Интерьер магазина Бородинский"></a>
         </figure>
-        <span class="button gallery-button gallery-button-back">Назад</span>
-        <span class="button gallery-button gallery-button-next">Вперед</span>
+        <button class="button gallery-button gallery-button-back" type="button">Назад</button>
+        <button class="button gallery-button gallery-button-next" type="button">Вперед</button>
       </section>
 
        <section class="contacts">
@@ -93,6 +93,26 @@
         <h2>Записаться</h2>
         <p class="appointment-info">Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
         <!-- Здесь будет форма -->
+        <form action="https://echo.htmlacademy.ru/" method="post">
+            <p>
+              <label for="appointment-date">Дата</label>
+              <input type="text" name="appointment-date" id="appointment-date" placeholder="08.10.2017">
+            </p>
+            <p>
+              <label for="appointment-date">Время</label>
+              <input type="text" name="appointment-time" id="appointment-time" placeholder="10:00">
+            </p>
+            <p>
+              <label for="appointment-date">Ваше имя</label>
+              <input type="text" name="appointment-name" id="appointment-name" placeholder="Борода">
+            </p>
+            <p>
+              <label for="appointment-date">Телефон</label>
+              <input type="tel"  name="appointment-phone" id="appointment-phone" placeholder="+7 123 456-78-90">
+            </p>
+            <button type="submit" >Отправить</button>
+
+        </form>
       </section>
     </main>
     <footer class="main-footer">
@@ -116,16 +136,37 @@
       </p>
     </footer>
 
-    <section class="modal modal-login">
+    <section class="modal modal-login visually-hidden">
+      <button class="modal-close">x</button>
       <h2>Личный кабинет</h2>
       <p>Введите свой логин и пароль.</p>
       <!-- Здесь будет форма -->
-      <span class="modal-close">x</span>
+      <form action="https://echo.htmlacademy.ru" method="post">
+          <p>
+              <label for="form-login">Логин</label>
+              <input type="text" name="form-login" id="form-login" placeholder="ЛОГИН">
+          </p>
+          <p>
+              <label for="form-password">Пароль</label>
+              <input type="password" name="form-password" id="form-password" placeholder="ПАРОЛЬ">
+          </p>
+          <p>
+              <input type="checkbox" name="remember-me" id="remember-me">
+              <label for="remember-me">Запомните меня</label>
+              <a href="#">Я забыл пароль!</a>
+          </p>
+          <button type="submit">Войти</button>
+      </form>
+
     </section>
 
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
-      <span class="modal-close">x</span>
+      <button class="modal-close">x</button>
+      <a href="#">
+        <img src="img/map.jpg" alt="Карта как до нас добраться">
+      </a>
+
     </section>
   </body>
 </html>
