--- a/catalog.html
+++ b/catalog.html
@@ -47,17 +47,17 @@
         <h2 class="visually-hidden">Фильтр каталога товаров Барбершопа</h2>
         <form action="https://echo.htmlacademy.ru">
             <h3 class="catalog-filter-brends-headline">Производители</h3>
-            <input type="checkbox" name="brend-1" id="brend-1" checked>
+            <input class="visually-hidden" type="checkbox" name="brend-1" id="brend-1" checked>
             <label class="catalog-filter-brend"  for="brend-1">Baxter of California</label>
-            <input type="checkbox" name="brend-2" id="brend-2">
+            <input class="visually-hidden" type="checkbox" name="brend-2" id="brend-2">
             <label class="catalog-filter-brend"  for="brend-2">Mr Natty</label>
-            <input type="checkbox" name="brend-3" id="brend-3" checked>
+            <input class="visually-hidden" type="checkbox" name="brend-3" id="brend-3" checked>
             <label class="catalog-filter-brend"  for="brend-3">Suavecito</label>
-            <input type="checkbox" name="brend-4" id="brend-4">
+            <input class="visually-hidden" type="checkbox" name="brend-4" id="brend-4">
             <label class="catalog-filter-brend"  for="brend-4">Malin+Goetz</label>
-            <input type="checkbox" name="brend-5" id="brend-5">
+            <input class="visually-hidden" type="checkbox" name="brend-5" id="brend-5">
             <label class="catalog-filter-brend"  for="brend-5">Murray’s</label>
-            <input type="checkbox" name="brend-6" id="brend-6" checked>
+            <input class="visually-hidden" type="checkbox" name="brend-6" id="brend-6" checked>
             <label class="catalog-filter-brend"  for="brend-6">American Crew</label>
 
             <h3 class="catalog-filter-group-products-headline">Группы товаров</h3>
@@ -137,27 +137,27 @@
     </main>
 
     <footer class="main-footer">
-      <div class="main-footer-contacts">
-        <p>
-          Барбершоп "Бородинский" <br>
-          Адрес:г.Санкт-Петербург,ул.Б.Конюшенная,д.19/8<br>
-          <a href="#">Как нас найти?</a><br>
-          Телефон:+7(495)666-02-66
-        </p>
-      </div>
-      <div class="main-footer-social">
-        <span>Давайте дружить!</span>
-        <ul class="main-footer-social-list">
-          <li><a class="main-footer-social-vk" href="">vk</a></li>
-          <li><a class="main-footer-social-fb" href="">fb</a></li>
-          <li><a class="main-footer-social-insta" href="">instagram</a></li>
-        </ul>
-      </div>
-      <div class="main-footer-developed-by">
-        <span class="main-footer-developed-by-headline">Разработано:</span>
-        <a class="main-footer-developed-by-link" href="#">HTML Academy</a>
-      </div>
-    </footer>
+        <div class="main-footer-contacts">
+          <p>
+            Барбершоп "Бородинский" <br>
+            Адрес:г.Санкт-Петербург,ул.Б.Конюшенная,д.19/8<br>
+            <a href="#">Как нас найти?</a><br>
+            Телефон:+7(495)666-02-66
+          </p>
+        </div>
+        <div class="main-footer-social">
+          <span>Давайте дружить!</span>
+          <ul class="main-footer-social-list">
+            <li><a class="main-footer-social-vk" href="" aria-label="Ссылка на нашу группу ВКонтакте">vk</a></li>
+            <li><a class="main-footer-social-fb" href="" aria-label="Ссылка на нашу группу Фэйсбук">fb</a></li>
+            <li><a class="main-footer-social-insta" href="" aria-label="Ссылка на нашу группу Инстаграм">instagram</a></li>
+          </ul>
+        </div>
+        <div class="main-footer-developed-by">
+          <span class="main-footer-developed-by-headline">Разработано:</span>
+          <a class="main-footer-developed-by-link" href="#" aria-label="Ссылка на сайт разработчика">HTML Academy</a>
+        </div>
+      </footer>
 
   </body>
 </html>
