--- a/index.html
+++ b/index.html
@@ -116,25 +116,27 @@
       </section>
     </main>
     <footer class="main-footer">
-      <p class="footer-contacts">
-        Барбершоп «Бородинский»<br>
-        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-        <a href="map.html">Как нас найти?</a><br>
-        Телефон: +7 (812) 666-02-66
-      </p>
-      <div class="footer-social">
-        <b>Давайте дружить!</b>
-        <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
-        </ul>
-      </div>
-      <p class="footer-copyright">
-        <b>Разработано:</b>
-        <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-      </p>
-    </footer>
+        <div class="main-footer-contacts">
+          <p>
+            Барбершоп "Бородинский" <br>
+            Адрес:г.Санкт-Петербург,ул.Б.Конюшенная,д.19/8<br>
+            <a href="#">Как нас найти?</a><br>
+            Телефон:+7(495)666-02-66
+          </p>
+        </div>
+        <div class="main-footer-social">
+          <span>Давайте дружить!</span>
+          <ul class="main-footer-social-list">
+            <li><a class="main-footer-social-vk" href="" aria-label="Ссылка на нашу группу ВКонтакте">vk</a></li>
+            <li><a class="main-footer-social-fb" href="" aria-label="Ссылка на нашу группу Фэйсбук">fb</a></li>
+            <li><a class="main-footer-social-insta" href="" aria-label="Ссылка на нашу группу Инстаграм">instagram</a></li>
+          </ul>
+        </div>
+        <div class="main-footer-developed-by">
+          <span class="main-footer-developed-by-headline">Разработано:</span>
+          <a class="main-footer-developed-by-link" href="#" aria-label="Ссылка на сайт разработчика">HTML Academy</a>
+        </div>
+      </footer>
 
     <section class="modal modal-login visually-hidden">
       <button class="modal-close">x</button>
