--- a/price.html
+++ b/price.html
@@ -84,7 +84,7 @@
         </p>
       </section>
   </main>
-    <footer class="main-footer">
+  <footer class="main-footer">
       <div class="main-footer-contacts">
         <p>
           Барбершоп "Бородинский" <br>
@@ -96,14 +96,14 @@
       <div class="main-footer-social">
         <span>Давайте дружить!</span>
         <ul class="main-footer-social-list">
-          <li><a class="main-footer-social-vk" href="">vk</a></li>
-          <li><a class="main-footer-social-fb" href="">fb</a></li>
-          <li><a class="main-footer-social-insta" href="">instagram</a></li>
+          <li><a class="main-footer-social-vk" href="" aria-label="Ссылка на нашу группу ВКонтакте">vk</a></li>
+          <li><a class="main-footer-social-fb" href="" aria-label="Ссылка на нашу группу Фэйсбук">fb</a></li>
+          <li><a class="main-footer-social-insta" href="" aria-label="Ссылка на нашу группу Инстаграм">instagram</a></li>
         </ul>
       </div>
       <div class="main-footer-developed-by">
         <span class="main-footer-developed-by-headline">Разработано:</span>
-        <a class="main-footer-developed-by-link" href="#">HTML Academy</a>
+        <a class="main-footer-developed-by-link" href="#" aria-label="Ссылка на сайт разработчика">HTML Academy</a>
       </div>
     </footer>
   </body>
