--- a/catalog-item.html
+++ b/catalog-item.html
@@ -31,13 +31,13 @@
             </ul>
             <ul>
                 <li class="user-navigation">
-                  <a class="user-navigation-link" href="#">Вход</a>
+                  <a class="user-navigation-link" href="#" aria-label="Войти на сайт под своим логином и паролем">Вход</a>
                 </li>
             </ul>
           </nav>
         </header>
         <main class="container">
-          <h1 class="page-headline">набор для путешествий «Baxter of California»</h1>
+          <h1 class="page-headline">Набор для путешествий «Baxter of California»</h1>
           <ul class="breadcrumbs">
             <li><a class="breadcrumbs-link" href="#">Главная</a></li>
             <li><a class="breadcrumbs-link" href="#">Магазин</a></li>
@@ -76,7 +76,7 @@
             </ul>
           </div>
         </main>
-          <footer class="main-footer">
+        <footer class="main-footer">
             <div class="main-footer-contacts">
               <p>
                 Барбершоп "Бородинский" <br>
@@ -88,14 +88,14 @@
             <div class="main-footer-social">
               <span>Давайте дружить!</span>
               <ul class="main-footer-social-list">
-                <li><a class="main-footer-social-vk" href="">vk</a></li>
-                <li><a class="main-footer-social-fb" href="">fb</a></li>
-                <li><a class="main-footer-social-insta" href="">instagram</a></li>
+                <li><a class="main-footer-social-vk" href="" aria-label="Ссылка на нашу группу ВКонтакте">vk</a></li>
+                <li><a class="main-footer-social-fb" href="" aria-label="Ссылка на нашу группу Фэйсбук">fb</a></li>
+                <li><a class="main-footer-social-insta" href="" aria-label="Ссылка на нашу группу Инстаграм">instagram</a></li>
               </ul>
             </div>
             <div class="main-footer-developed-by">
               <span class="main-footer-developed-by-headline">Разработано:</span>
-              <a class="main-footer-developed-by-link" href="#">HTML Academy</a>
+              <a class="main-footer-developed-by-link" href="#" aria-label="Ссылка на сайт разработчика">HTML Academy</a>
             </div>
           </footer>
   </body>
