Добавил aria-label в шапку
Добавил aria-label в шапку

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -14,19 +14,19 @@
             </a>
             <ul>
               <li class="main-navigation-item">
-                <a class="main-navigation-item-link" href="#">Информация</a>
+                <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Информация">Информация</a>
               </li>
               <li class="main-navigation-item">
-                <a class="main-navigation-item-link" href="#">Новости</a>
+                <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Новости">Новости</a>
               </li>
               <li class="main-navigation-item">
-                <a class="main-navigation-item-link" href="#">Прайс-лист</a>
+                <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Прайс-лист">Прайс-лист</a>
               </li>
               <li class="main-navigation-item">
-                <a class="main-navigation-item-link active">Магазин</a>
+                <a class="main-navigation-item-link active" aria-label="Раздел сайта Магазин">Магазин</a>
               </li>
               <li class="main-navigation-item">
-                <a class="main-navigation-item-link" href="#">Контакты</a>
+                <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Контакты">Контакты</a>
               </li>
             </ul>
             <ul>
