--- a/catalog.html
+++ b/catalog.html
@@ -13,25 +13,25 @@
           <img src="img/logo-mini.svg" width="111" height="24" alt="Логотип Барбершоп Бородинский">
         </a>
         <ul>
-          <li class="main-navigation-item">
-            <a class="main-navigation-item-link" href="#">Информация</a>
-          </li>
-          <li class="main-navigation-item">
-            <a class="main-navigation-item-link" href="#">Новости</a>
-          </li>
-          <li class="main-navigation-item">
-            <a class="main-navigation-item-link" href="#">Прайс-лист</a>
-          </li>
-          <li class="main-navigation-item">
-            <a class="main-navigation-item-link active">Магазин</a>
-          </li>
-          <li class="main-navigation-item">
-            <a class="main-navigation-item-link" href="#">Контакты</a>
-          </li>
-        </ul>
+            <li class="main-navigation-item">
+              <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Информация">Информация</a>
+            </li>
+            <li class="main-navigation-item">
+              <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Новости">Новости</a>
+            </li>
+            <li class="main-navigation-item">
+              <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Прайс-лист">Прайс-лист</a>
+            </li>
+            <li class="main-navigation-item">
+              <a class="main-navigation-item-link active" aria-label="Раздел сайта Магазин">Магазин</a>
+            </li>
+            <li class="main-navigation-item">
+              <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Контакты">Контакты</a>
+            </li>
+          </ul>
         <ul>
             <li class="user-navigation">
-              <a class="user-navigation-link" href="#">Вход</a>
+              <a class="user-navigation-link" href="#" aria-label="Войти на сайт под своим логином и паролем">Вход</a>
             </li>
         </ul>
       </nav>
@@ -79,7 +79,7 @@
             «Baxter of California»</h3>
             <div class="catalog-item-buy">
                 <span class="catalog-item-price">500 р</span>
-                <input type="button" value="Купить">
+                <button type="button" >Купить</button>
             </div>
        </article>
        <article class="catalog-item">
@@ -88,7 +88,7 @@
               «Baxter of California»</h3>
              <div class="catalog-item-buy">
                  <span class="catalog-item-price">750 р</span>
-                 <input type="button" value="Купить">
+                 <button type="button" >Купить</button>
              </div>
         </article>
         <article class="catalog-item">
@@ -97,7 +97,7 @@
                 «SUAVECITO»</h3>
                <div class="catalog-item-buy">
                    <span class="catalog-item-price">290 р</span>
-                   <input type="button" value="Купить">
+                   <button type="button" >Купить</button>
                </div>
           </article>
           <article class="catalog-item">
@@ -106,7 +106,7 @@
                   «American crew»</h3>
                  <div class="catalog-item-buy">
                      <span class="catalog-item-price">500 р</span>
-                     <input type="button" value="Купить">
+                     <button type="button" >Купить</button>
                  </div>
             </article>
             <article class="catalog-item">
@@ -115,7 +115,7 @@
                     «AMERICAN CREW»</h3>
                    <div class="catalog-item-buy">
                        <span class="catalog-item-price">300 р</span>
-                       <input type="button" value="Купить">
+                       <button type="button" >Купить</button>
                    </div>
               </article>
               <article class="catalog-item">
@@ -124,14 +124,14 @@
                       «Baxter of California»</h3>
                      <div class="catalog-item-buy">
                          <span class="catalog-item-price">3900 р</span>
-                         <input type="button" value="Купить">
+                         <button type="button" >Купить</button>
                      </div>
                 </article>
                 <ul class="pagination">
-                  <li><a href="#">1</a></li>
+                  <li><a href="#" aria-label="Переход на первую страницу каталога">1</a></li>
                   <li class="pagination-active-page"><a>2</a></li>
-                  <li><a href="#">3</a></li>
-                  <li><a href="#">4</a></li>
+                  <li><a href="#" aria-label="Переход на третию страницу каталога">3</a></li>
+                  <li><a href="#" aria-label="Переход на четвертую страницу каталога">4</a></li>
                 </ul>
      </section>
     </main>
@@ -148,9 +148,9 @@
         <div class="main-footer-social">
           <span>Давайте дружить!</span>
           <ul class="main-footer-social-list">
-            <li><a class="main-footer-social-vk" href="" aria-label="Ссылка на нашу группу ВКонтакте">vk</a></li>
-            <li><a class="main-footer-social-fb" href="" aria-label="Ссылка на нашу группу Фэйсбук">fb</a></li>
-            <li><a class="main-footer-social-insta" href="" aria-label="Ссылка на нашу группу Инстаграм">instagram</a></li>
+            <li><a class="main-footer-social-vk" href="#"    aria-label="Ссылка на нашу группу ВКонтакте">vk</a></li>
+            <li><a class="main-footer-social-fb" href="#"    aria-label="Ссылка на нашу группу Фэйсбук">fb</a></li>
+            <li><a class="main-footer-social-insta" href="#" aria-label="Ссылка на нашу группу Инстаграм">instagram</a></li>
           </ul>
         </div>
         <div class="main-footer-developed-by">
