--- a/price.html
+++ b/price.html
@@ -13,25 +13,25 @@
         <img src="img/logo-mini.svg" width="111" height="24" alt="Логотип Барбершоп Бородинский">
       </a>
       <ul>
-        <li class="main-navigation-item">
-          <a class="main-navigation-item-link" href="#">Информация</a>
-        </li>
-        <li class="main-navigation-item">
-          <a class="main-navigation-item-link" href="#">Новости</a>
-        </li>
-        <li class="main-navigation-item">
-          <a class="main-navigation-item-link active">Прайс-лист</a>
-        </li>
-        <li class="main-navigation-item">
-          <a class="main-navigation-item-link" href="#">Магазин</a>
-        </li>
-        <li class="main-navigation-item">
-          <a class="main-navigation-item-link" href="#">Контакты</a>
-        </li>
-      </ul>
+          <li class="main-navigation-item">
+            <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Информация">Информация</a>
+          </li>
+          <li class="main-navigation-item">
+            <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Новости">Новости</a>
+          </li>
+          <li class="main-navigation-item">
+            <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Прайс-лист">Прайс-лист</a>
+          </li>
+          <li class="main-navigation-item">
+            <a class="main-navigation-item-link active" aria-label="Раздел сайта Магазин">Магазин</a>
+          </li>
+          <li class="main-navigation-item">
+            <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Контакты">Контакты</a>
+          </li>
+        </ul>
       <ul>
         <li class="user-navigation">
-          <a class="user-navigation-link" href="#">Вход</a>
+          <a class="user-navigation-link" href="#"  aria-label="Войти на сайт под своим логином и паролем">Вход</a>
         </li>
       </ul>
     </nav>
