--- a/index.html
+++ b/index.html
@@ -12,16 +12,26 @@
           <a >
               <img src="img/index-logo.svg" width="371" height="155" alt="Логотип барбершопа «Бородинский»">
           </a>
-          <ul class="site-navigation">
-            <li><a href="#">Информация</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="#">Прайс-лист</a></li>
-            <li><a href="#">Магазин</a></li>
-            <li><a href="#">Контакты</a></li>
+          <ul>
+              <li class="main-navigation-item">
+                <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Информация">Информация</a>
+              </li>
+              <li class="main-navigation-item">
+                <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Новости">Новости</a>
+              </li>
+              <li class="main-navigation-item">
+                <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Прайс-лист">Прайс-лист</a>
+              </li>
+              <li class="main-navigation-item">
+                <a class="main-navigation-item-link active" aria-label="Раздел сайта Магазин">Магазин</a>
+              </li>
+              <li class="main-navigation-item">
+                <a class="main-navigation-item-link" href="#" aria-label="Раздел сайта Контакты">Контакты</a>
+              </li>
           </ul>
           <ul>
             <li class="user-navigation">
-              <a href="#">Вход</a>
+              <a href="#"  aria-label="Войти на сайт под своим логином и паролем">Вход</a>
             </li>
           </ul>
         </nav>
